[workspace]
resolver = "2"
members = [
    "rust/android_test",
    "rust/android_test_app",
    "rust/build_logic",
    "rust/container_tests",
    "rust/mockwebserver",
    "rust/mockwebserver_deprecated",
    "rust/mockwebserver_junit4",
    "rust/mockwebserver_junit5",
    "rust/module_tests",
    "rust/native_image_tests",
    "rust/okcurl",
    "rust/okhttp",
    "rust/okhttp_bom",
    "rust/okhttp_brotli",
    "rust/okhttp_coroutines",
    "rust/okhttp_dnsoverhttps",
    "rust/okhttp_hpacktests",
    "rust/okhttp_idna_mapping_table",
    "rust/okhttp_java_net_cookiejar",
    "rust/okhttp_logging_interceptor",
    "rust/okhttp_osgi_tests",
    "rust/okhttp_sse",
    "rust/okhttp_testing_support",
    "rust/okhttp_tls"
]

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache-2.0"

# Shared versions for crates that wire up translated sources and integration tests.
[workspace.dependencies]
lazy_static = "1"
libc = "0.2"
log = "0.4"
once_cell = "1"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
